--- a/nspanel_esphome.yaml
+++ b/nspanel_esphome.yaml
@@ -880,6 +880,16 @@ number:
             id: temperature_correction_global
             value: !lambda 'return x;'
 
+time:
+  - on_time:
+    # Every minute
+    - seconds: 0
+      minutes: '*'
+      then:
+#        - wait_until:
+#            switch.is_on: nextion_init
+         - lambda: id(disp1).set_component_text_printf("time", "%s", id(sntp_time).now())
+#         - lambda: id(disp1).set_component_text_printf("climate.current_temp", "%.1f", id(temp_nspanel).state);
 
 ##### START - DISPLAY START CONFIGURATION #####
 display:
