--- a/nspanel_esphome.yaml
+++ b/nspanel_esphome.yaml
@@ -882,6 +882,7 @@ number:
 
 time:
   - platform: sntp
+    id: sntp_time
     on_time:
     # Every minute
     - seconds: 0
@@ -890,7 +891,6 @@ time:
 #        - wait_until:
 #            switch.is_on: nextion_init
          - lambda: id(disp1).set_component_text_printf("time", "%s", id(sntp_time).now())
-#         - lambda: id(disp1).set_component_text_printf("climate.current_temp", "%.1f", id(temp_nspanel).state);
 
 ##### START - DISPLAY START CONFIGURATION #####
 display:
