--- a/nspanel_esphome.yaml
+++ b/nspanel_esphome.yaml
@@ -890,7 +890,7 @@ time:
       then:
 #        - wait_until:
 #            switch.is_on: nextion_init
-         - lambda: id(disp1).set_component_text_printf("time", "%s", id(sntp_time).now())
+         - lambda: id(disp1).set_component_text_printf("time", "%s:%s", id(sntp_time).now().minute, id(sntp_time).now().second)
 
 ##### START - DISPLAY START CONFIGURATION #####
 display:
