--- a/nspanel_esphome.yaml
+++ b/nspanel_esphome.yaml
@@ -880,18 +880,6 @@ number:
             id: temperature_correction_global
             value: !lambda 'return x;'
 
-time:
-  - platform: sntp
-    id: sntp_time
-    on_time:
-    # Every minute
-    - seconds: 0
-      minutes: '*'
-      then:
-#        - wait_until:
-#            switch.is_on: nextion_init
-         - lambda: id(disp1).set_component_text_printf("time", "%s:%s", id(sntp_time).now().minute, id(sntp_time).now().second)
-
 ##### START - DISPLAY START CONFIGURATION #####
 display:
   - platform: nextion
@@ -925,3 +913,19 @@ display:
         - switch.template.publish:
             id: nextion_init
             state: on
+
+time:
+  - platform: sntp
+    id: sntp_time
+    on_time:
+    # Every minute
+    - seconds: 0
+      minutes: '*'
+      then:
+        - lambda: |-
+            auto time = id(sntp_time).now();
+            id(disp1).set_component_text_printf("time","%02d:%02d",time.hour,time.minute)
+#        - wait_until:
+#            switch.is_on: nextion_init
+
+         - lambda: 
